--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Arapey:ital@0;1&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Arapey&display=swap" rel="stylesheet">
+
     <link
 href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap"
   rel="stylesheet"
